--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div  class="container">
-        <h1>Testimonial</h1>
+        <h1>Testimonials</h1>
         <div class="content">
             <p>This product is amazing ! I highly recommend it to anyone in need of a solution like this</p>
             <i>~ John Doe</i>
