--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
 	<div  class="container">
         <h1>Testimonials</h1>
         <div class="content">
-            <p>This product is amazing ! I highly recommend it to anyone in need of a solution like this</p>
+            <p>This product is amazing ! I highly recommend it to anyone in need of a solution like this.</p>
             <i>~ John Doe</i>
         </div>
         <div class="content">
-            <p>I have been using this for a few weeks now and it has completely transformed my workflow</p>
+            <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
             <i>~ Jane Smith</i>
         </div>
     </div>
